some javadocs added